[package]
name = "lbs"
version = "0.1.0"
edition = "2024"
description = "Linux Battle Shaper (LBS) - A powerful per-process CPU limiter for Linux with universal Wayland & X11 focus support."
repository = "https://github.com/Agzes/LBS"
license = "MIT"
keywords = ["linux", "utility", "cpu", "limiter", "control", "wayland", "x11"]
categories = ["os::linux-apis", "visualization", "system::administration"]

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.12"
ksni = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
notify-rust = "4.11"
dirs = "5.0"
libc = "0.2"
once_cell = "1.19"
lazy_static = "1.4"

[package.metadata.appimage]
name = "Linux Battle Shaper"
icon = "assets/logo.png"
desktop_entry = "dev.agzes.lbs.desktop"
auto_link = true
category = "Utility"